ingress/argo-rollouts.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argo-rollouts-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  listeners:
  - name: default
    hostname: "rollouts.rejekts.kubespaces.io"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: argo-rollouts-gateway
    namespace: istio-system
  hostnames: ["rollouts.rejekts.kubespaces.io"]
  rules:
  - backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
