ingress/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  listeners:
  - name: default
    hostname: "grafana.rejekts.kubespaces.io"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus
spec:
  parentRefs:
  - name: grafana-gateway
    namespace: istio-system
  hostnames: ["grafana.rejekts.kubespaces.io"]
  rules:
  - backendRefs:
    - name: prom-grafana
      port: 80
