ingress/httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
    - name: http
      namespace: istio-system
  hostnames: ["httpbin.rejekts.kubespaces.io"]
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
