ingress/hubble.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
  - name: http
    namespace: istio-system
  hostnames: ["hubble.rejekts.kubespaces.io"]
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
