ingress/prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  parentRefs:
  - name: http
    namespace: istio-system
  hostnames: ["prometheus.rejekts.kubespaces.io"]
  rules:
  - backendRefs:
    - name: prom-kube-prometheus-stack-prometheus
      port: 9090
